hide toggled collapse button bug fixed

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                 return
             } 
             if(nav_bar_state==='col'){
+                collapse.classList.remove('active')
                 hide_all(false)
             }
             
