--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <div id="content">
         <div id="image_container">
             <img src="person.png" alt="imagem" id="foto">
-            <h3>"Cogito ergo sum"</h3>
+            <h3>"Não estou conformado com minha ignorância"</h3>
         </div>
 
         <br><br>
 
-        <h3 style="text-align: center;">Anseio Profissional</h3>
-        <p style="text-align:justify; text-indent: 20px;">
+        <h3 class="subtitle">Anseio Profissional</h3>
+        <p class="text">
             Sint magna veniam elit aliquip dolore excepteur. 
             Nisi ullamco aliquip sit ad aliquip aute ad occaecat laborum sit. Voluptate cillum sint voluptate nulla laborum. 
             Do tempor laborum enim in do nulla quis. Ut quis veniam nisi aliqua ea exercitation laborum culpa id.
@@ -33,8 +33,18 @@
             Mollit fugiat dolore esse irure qui non excepteur nostrud labore dolore est ea est mollit.
         </p>
 
-        <h3>Principais conhecimentos: </h3>
-        <ul>
+        <h3 class="subtitle">Formação</h3>
+
+        <p class="text">
+            Sint magna veniam elit aliquip dolore excepteur. 
+            Nisi ullamco aliquip sit ad aliquip aute ad occaecat laborum sit. Voluptate cillum sint voluptate nulla laborum. 
+            Do tempor laborum enim in do nulla quis. Ut quis veniam nisi aliqua ea exercitation laborum culpa id.
+            Cupidatat veniam irure consectetur fugiat consequat elit enim non dolore quis ad laboris. 
+            Mollit fugiat dolore esse irure qui non excepteur nostrud labore dolore est ea est mollit.
+        </p>
+
+        <h3 class="subtitle">Principais conhecimentos: </h3>
+        <ul class="text">
             <li>
                 <p>Liguagem Python</p>
             </li>
@@ -48,7 +58,22 @@
                 <p>Liguagem Go</p>
             </li>
         </ul>
+
+        <h3 class="subtitle">Principais projetos: </h3>
+        <ul class="text">
+            <li>
+                <p>Story Trees <a target="_blank" href="https://story-trees.80ff.com.br" >Site</a> - <a target="_blank" href="https://github.com/luizmgoncalves/story_telling_server">Github</a></p>
+            </li>
+            <li>
+                <p>Cave Game <a target="_blank" href="https://github.com/luizmgoncalves/cave_game">Github</a></p>
+            </li>
+            <li>
+                <p>C flappy bird - <a href="https://github.com/luizmgoncalves/c_flappy_bird">Github</a></p>
+            </li>
+        </ul>
     </div>
+
+    <div style="height:500px;"></div>
     <script src="script.js"></script>
 </body>
 
